tests/NormalTests/paczka1/fuzzy1/31206542.err
Error in line 1: JyD A187 73,7
Error in line 4: rKMO2mOSmm A13 11,3
Error in line 16: JyD A13 230,84
Error in line 6: wPwmdDwJuy S704 39,0
Error in line 3: A13 A419 93,2
Error in line 17: JyD A13 8,8
Error in line 21: wPwmdDwJuy A187 486,1
Error in line 32: Tyqv A187 3,28
Error in line 29: wPwmdDwJuy S704 43,6
Error in line 31: Tyqv A187 47,3
Error in line 37: Tyqv S704 23,8
